<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <include
        android:id="@+id/appbar"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="260dp"
        android:layout_height="260dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:scaleType="centerCrop"
        android:src="@drawable/profile_photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appbar" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/black"
        app:layout_constraintTop_toBottomOf="@+id/name_text"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/full_name"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/track_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/android"
        app:layout_constraintBottom_toBottomOf="@+id/track_label"
        app:layout_constraintStart_toEndOf="@+id/track_label"
        app:layout_constraintTop_toTopOf="@+id/track_label" />

    <TextView
        android:id="@+id/country_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/nigeria"
        app:layout_constraintBottom_toBottomOf="@+id/country_label"
        app:layout_constraintStart_toEndOf="@+id/country_label"
        app:layout_constraintTop_toTopOf="@+id/country_label" />

    <TextView
        android:id="@+id/phone_number_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/phone_number"
        app:layout_constraintBottom_toBottomOf="@+id/phone_number_label"
        app:layout_constraintStart_toEndOf="@+id/phone_number_label"
        app:layout_constraintTop_toTopOf="@+id/phone_number_label" />

    <TextView
        android:id="@+id/email_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/email_address"
        app:layout_constraintBottom_toBottomOf="@+id/email_label"
        app:layout_constraintStart_toEndOf="@+id/email_label"
        app:layout_constraintTop_toTopOf="@+id/email_label" />

    <TextView
        android:id="@+id/slack_username_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/redarokim"
        app:layout_constraintBottom_toBottomOf="@+id/slack_username_label"
        app:layout_constraintStart_toEndOf="@+id/slack_username_label"
        app:layout_constraintTop_toTopOf="@+id/slack_username_label" />

    <TextView
        android:id="@+id/track_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="Track:"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:layout_constraintVertical_chainStyle="spread" />

    <TextView
        android:id="@+id/country_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Country:"
        app:layout_constraintStart_toStartOf="@+id/track_label"
        app:layout_constraintTop_toBottomOf="@+id/track_label" />

    <TextView
        android:id="@+id/email_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Email:"
        app:layout_constraintStart_toStartOf="@+id/country_label"
        app:layout_constraintTop_toBottomOf="@+id/phone_number_label" />

    <TextView
        android:id="@+id/phone_number_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Phone Number:"
        app:layout_constraintStart_toStartOf="@+id/email_label"
        app:layout_constraintTop_toBottomOf="@+id/country_label" />

    <TextView
        android:id="@+id/slack_username_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Slack Username:"
        app:layout_constraintStart_toStartOf="@+id/email_label"
        app:layout_constraintTop_toBottomOf="@+id/email_label" />
</android.support.constraint.ConstraintLayout>